--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="page-area">
 <input #val type="text" placeholder="Input here">
 <button (click)="submitValue(val.value)">Submit Value</button>
-<app-child *ngIf="destroy" [myValue]="value">3Ri{{value}} </app-child>
+<app-child *ngIf="destroy" [myValue]="value">welcome to justo learn</app-child>
 <button (click)="destroyComp()" >remove</button>
 </div>
